fixed pre word wrap

--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ pre {
     background-color: #fafafa;
     padding: 1rem;
     text-align: left;
+    white-space: pre-wrap;
 }
 
 blockquote {
